--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
        "['llenar jarra de 4', 'llenar jarra de 3']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
        "(4, 0)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,22 @@
     "                \n",
     "                h += (abs(f_ficha - f_objetivo) + abs(c_ficha - c_objetivo))\n",
     "\n",
-    "        return h"
+    "        return h\n",
+    "    \n",
+    "    \n",
+    "    def goal_test(self,estado):\n",
+    "        return estado[8] == 0\n",
+    "    \n",
+    "    def check_solvability(self, state):\n",
+    "        \"\"\" Checks if the given state is solvable \"\"\"\n",
+    "        # The solvability of a configuration can be checked by calculating the Inversion Permutation. \n",
+    "        #If the total Inversion Permutation is even then the initial configuration is solvable else the initial configuration is not solvable which means that only 9!/2 initial states lead to a solution.\n",
+    "        inversion = 0\n",
+    "        for i in range(len(state)):\n",
+    "            for j in range(i+1, len(state)):\n",
+    "                if (state[i] > state[j]) and state[i] != 0 and state[j]!= 0:\n",
+    "                    inversion += 1\n",
+    "        return inversion % 2 == 0        "
    ]
   },
   {
@@ -591,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +615,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 0, 5)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +636,7 @@
        "['Mover hueco arriba', 'Mover hueco izquierda', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -633,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +657,7 @@
        "(2, 8, 3, 1, 0, 4, 7, 6, 5)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +687,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 5, 0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +707,7 @@
        "(2, 8, 3, 1, 6, 4, 0, 7, 5)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -712,7 +727,7 @@
        "1"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +747,7 @@
        "10"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -753,7 +768,7 @@
        "16"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +848,7 @@
     "            index_ficha = node.index(ficha)\n",
     "            \n",
     "            # Posicion objetivo de la ficha\n",
-    "            index_objetivo = ficha-1\n",
+    "            index_objetivo = ficha - 1\n",
     "            \n",
     "            # Sumamos la distancia de la ficha a su posicion en el tablero objetivo\n",
     "            if ficha == 0:\n",
@@ -851,7 +866,7 @@
     "                    h += 6\n",
     "            elif index_ficha != index_objetivo: \n",
     "                # Variable para almacenar la fila en la que se encuentra la ficha\n",
-    "                f_ficha = 0\n",
+    "                f_ficha = 3\n",
     "                \n",
     "                if index_ficha in (0,1,2,3):\n",
     "                    f_ficha = 0\n",
@@ -859,11 +874,9 @@
     "                    f_ficha = 1\n",
     "                elif index_ficha in (8,9,10,11):\n",
     "                    f_ficha = 2\n",
-    "                else:\n",
-    "                    f_ficha = 3\n",
     "                    \n",
     "                # Variable para almacenar la fila objetivo\n",
-    "                f_objetivo = 0\n",
+    "                f_objetivo = 3\n",
     "                \n",
     "                if index_objetivo in (0,1,2,3):\n",
     "                    f_objetivo = 0\n",
@@ -871,11 +884,9 @@
     "                    f_objetivo = 1\n",
     "                elif index_objetivo in (8,9,10,11):\n",
     "                    f_objetivo = 2\n",
-    "                else:\n",
-    "                    f_objetivo = 3\n",
     "                    \n",
     "                # Variable para almacenar la columna en la que se encuentra la ficha\n",
-    "                c_ficha = 0\n",
+    "                c_ficha = 3\n",
     "                \n",
     "                if index_ficha in (0,4,8,12):\n",
     "                    c_ficha = 0\n",
@@ -883,11 +894,9 @@
     "                    c_ficha = 1\n",
     "                elif index_ficha in (2,6,10,14):\n",
     "                    c_ficha = 2\n",
-    "                else:\n",
-    "                    c_ficha = 3\n",
     "                    \n",
     "                # Variable para almacenar la columna objetivo\n",
-    "                c_objetivo = 0\n",
+    "                c_objetivo = 3\n",
     "                \n",
     "                if index_objetivo in (0,4,8,12):\n",
     "                    c_objetivo = 0\n",
@@ -895,12 +904,26 @@
     "                    c_objetivo = 1\n",
     "                elif index_objetivo in (2,6,10,14):\n",
     "                    c_objetivo = 2\n",
-    "                else:\n",
-    "                    c_objetivo = 3\n",
     "                \n",
     "                h += (abs(f_ficha - f_objetivo) + abs(c_ficha - c_objetivo))\n",
     "                \n",
-    "        return h"
+    "        return h\n",
+    "    \n",
+    "    \n",
+    "    def goal_test(self,estado):\n",
+    "        return estado[14] == 0\n",
+    "    \n",
+    "    \n",
+    "    def check_solvability(self, state):\n",
+    "        \"\"\" Checks if the given state is solvable \"\"\"\n",
+    "        # The solvability of a configuration can be checked by calculating the Inversion Permutation. \n",
+    "        #If the total Inversion Permutation is even then the initial configuration is solvable else the initial configuration is not solvable which means that only 9!/2 initial states lead to a solution.\n",
+    "        inversion = 0\n",
+    "        for i in range(len(state)):\n",
+    "            for j in range(i+1, len(state)):\n",
+    "                if (state[i] > state[j]) and state[i] != 0 and state[j]!= 0:\n",
+    "                    inversion += 1\n",
+    "        return inversion % 2 == 0        "
    ]
   },
   {
@@ -912,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -921,7 +944,7 @@
        "(7, 13, 12, 3, 0, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -933,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +965,7 @@
        "['Mover hueco arriba', 'Mover hueco abajo', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +986,7 @@
        "(0, 13, 12, 3, 7, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +1007,7 @@
        "(7, 13, 12, 3, 9, 1, 4, 11, 0, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1028,7 @@
        "'Acción no válida'"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1049,7 @@
        "(7, 13, 12, 3, 1, 0, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1047,7 +1070,7 @@
        "40"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1059,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1091,7 @@
        "42"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1134,18 +1157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['llenar jarra de 4',\n",
+       " 'trasvasar de jarra de 4 a jarra de 3',\n",
+       " 'vaciar jarra de 3',\n",
+       " 'trasvasar de jarra de 4 a jarra de 3',\n",
+       " 'llenar jarra de 4',\n",
+       " 'trasvasar de jarra de 4 a jarra de 3']"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "breadth_first_tree_search(Jarras()).solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['llenar jarra de 3',\n",
+       " 'trasvasar de jarra de 3 a jarra de 4',\n",
+       " 'llenar jarra de 3',\n",
+       " 'trasvasar de jarra de 3 a jarra de 4',\n",
+       " 'vaciar jarra de 4',\n",
+       " 'trasvasar de jarra de 3 a jarra de 4']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "depth_first_graph_search(Jarras()).solution()"
    ]
@@ -1159,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,9 +1231,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 8, 3, 1, 6, 4, 7, 0, 5)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p8 = Ocho_Puzzle((2, 8, 3, 1, 6, 4, 7, 0, 5))\n",
     "p8.initial"
@@ -1186,18 +1252,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7, 8, 0)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p8.goal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mover hueco derecha']"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "breadth_first_tree_search(Ocho_Puzzle((2, 8, 3, 1, 6, 4, 7, 0, 5))).solution()\n",
     "## La llamada corresponde al algoritmo de busqueda en anchura sin control de repetidos.  \n",
@@ -1225,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,25 +1327,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Este estado inicial no tiene solucion'"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sol"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mover hueco derecha', 'Mover hueco derecha']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "breadth_first_tree_search(Ocho_Puzzle((1,2,3,4,5,6,0,7,8))).solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1266,9 +1376,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "breadth_first_tree_search(estado).solution()\n",
     "# Respuesta: ['arriba', 'izquierda', 'arriba', 'izquierda', 'abajo', 'derecha', 'derecha', 'abajo']"
@@ -1276,18 +1397,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "depth_first_graph_search(estado).solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "breadth_first_graph_search(estado).solution()"
    ]
