--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,57 @@
     "            for j in range(i+1, len(state)):\n",
     "                if (state[i] > state[j]) and state[i] != 0 and state[j]!= 0:\n",
     "                    inversion += 1\n",
-    "        return inversion % 2 == 0        "
+    "        return inversion % 2 == 0\n",
+    "    \n",
+    "    \n",
+    "    def linear(node):\n",
+    "        #goal = node.state.goal\n",
+    "        goal = (1,2,3,4,5,6,7,8,0)\n",
+    "        return sum([1 if node.state[i] != goal[i] else 0 for i in range(8)])\n",
+    "\n",
+    "\n",
+    "\n",
+    "    def manhattan(node):\n",
+    "        rango = 15\n",
+    "        col = 3\n",
+    "        state = node.state\n",
+    "        index_goal = {0: [3, 3], 1: [0, 0], 2: [0, 1], 3: [0, 2], 4: [0, 3], 5: [1, 0], 6: [1, 1], 7: [1, 2], 8: [1, 3], 9: [2, 0], 10: [2, 1], 11: [2, 2], 12: [2, 3], 13: [3, 0], 14: [3, 1], 15: [3, 2]}\n",
+    "        index_state = {}\n",
+    "        index = [[0, 0], [0, 1], [0, 2], [0, 3], [1, 0], [1, 1], [1, 2], [1, 3], [2, 0], [2, 1], [2, 2], [2, 3], [3, 0], [3, 1], [3, 2], [3, 3]]\n",
+    "\n",
+    "        for i in range(len(state)):\n",
+    "            index_state[state[i]] = index[i]\n",
+    "\n",
+    "        mhd = 0\n",
+    "        for i in range(rango):\n",
+    "            for j in range(col):\n",
+    "                mhd = abs(index_goal[i][j] - index_state[i][j]) + mhd\n",
+    "\n",
+    "        return mhd\n",
+    "\n",
+    "    def sqrt_manhattan(node):\n",
+    "        rango = 15\n",
+    "        col = 3\n",
+    "        index_goal = {0: [3, 3], 1: [0, 0], 2: [0, 1], 3: [0, 2], 4: [0, 3], 5: [1, 0], 6: [1, 1], 7: [1, 2], 8: [1, 3], 9: [2, 0], 10: [2, 1], 11: [2, 2], 12: [2, 3], 13: [3, 0], 14: [3, 1], 15: [3, 2]}\n",
+    "        index_state = {}\n",
+    "        index = [[0, 0], [0, 1], [0, 2], [0, 3], [1, 0], [1, 1], [1, 2], [1, 3], [2, 0], [2, 1], [2, 2], [2, 3], [3, 0], [3, 1], [3, 2], [3, 3]]\n",
+    "        x, y = 0, 0\n",
+    "\n",
+    "        state = node.state\n",
+    "        for i in range(len(state)):\n",
+    "            index_state[state[i]] = index[i]\n",
+    "\n",
+    "        mhd = 0    \n",
+    "        for i in range(rango):\n",
+    "            for j in range(col):\n",
+    "                mhd = (index_goal[i][j] - index_state[i][j])**2 + mhd\n",
+    "\n",
+    "        return math.sqrt(mhd)\n",
+    "\n",
+    "    def max_heuristic(node):\n",
+    "        score1 = manhattan(node)\n",
+    "        score2 = linear(node)\n",
+    "        return max(score1, score2)"
    ]
   },
   {
@@ -761,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +820,7 @@
        "(7, 13, 12, 3, 0, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +841,7 @@
        "['Mover hueco arriba', 'Mover hueco abajo', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +862,7 @@
        "(0, 13, 12, 3, 7, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -833,7 +883,7 @@
        "(7, 13, 12, 3, 9, 1, 4, 11, 0, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +904,7 @@
        "'Acción no válida'"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +925,7 @@
        "(7, 13, 12, 3, 1, 0, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1213,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 0, 5)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1175,7 +1225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1234,7 @@
        "(1, 2, 3, 4, 5, 6, 7, 8, 0)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1225,7 +1275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1239,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1248,7 +1298,7 @@
        "'Este estado inicial no tiene solucion'"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2409,7 +2459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2425,7 +2475,7 @@
        " 'Mover hueco abajo']"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2447,19 +2497,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'manhattan' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-142-49e50dc8fc5e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mastar_search\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpuzle\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mmanhattan\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msolution\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'manhattan' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "['Mover hueco izquierda',\n",
+       " 'Mover hueco arriba',\n",
+       " 'Mover hueco arriba',\n",
+       " 'Mover hueco izquierda',\n",
+       " 'Mover hueco abajo',\n",
+       " 'Mover hueco derecha',\n",
+       " 'Mover hueco abajo',\n",
+       " 'Mover hueco derecha']"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2570,6 +2626,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qpuzzle_1 = Quince_Puzzle((1,2,3,4,5,6,7,8,9,10,12,15,13,14,11,0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2609,7 +2702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2649,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2660,27 +2753,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7, 0, 8)"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p8p.initial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 4, 5, 6, 7, 8, 0)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "p8p.goal"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mover hueco izquierda',\n",
+       " 'Mover hueco arriba',\n",
+       " 'Mover hueco arriba',\n",
+       " 'Mover hueco izquierda',\n",
+       " 'Mover hueco abajo',\n",
+       " 'Mover hueco derecha',\n",
+       " 'Mover hueco abajo',\n",
+       " 'Mover hueco derecha']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "puzzle_1 = Ocho_Puzzle((2, 4, 3, 1, 5, 6, 7, 8, 0))\n",
     "astar_search(puzzle_1, manhattan).solution()"
@@ -2688,7 +2821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2915,7 +3048,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2929,7 +3062,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
