forzamos que llame manhatan y demás, menos linear, de la function Quince_Puzzle.

--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -684,10 +684,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import math\n",
+    "\n",
     "class Quince_Puzzle(Problem): \n",
     "    ## Completa la definición del problema\n",
     "    def __init__(self, initial, goal=(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 0)):\n",
@@ -751,18 +753,13 @@
     "                    inversion += 1\n",
     "        return inversion % 2 == 0\n",
     "    \n",
+    "\n",
     "    \n",
-    "    def linear(node):\n",
-    "        #goal = node.state.goal\n",
-    "        goal = (1,2,3,4,5,6,7,8,0)\n",
-    "        return sum([1 if node.state[i] != goal[i] else 0 for i in range(8)])\n",
-    "\n",
-    "\n",
-    "\n",
     "    def manhattan(node):\n",
     "        rango = 15\n",
-    "        col = 3\n",
+    "        col = 2\n",
     "        state = node.state\n",
+    "        \n",
     "        index_goal = {0: [3, 3], 1: [0, 0], 2: [0, 1], 3: [0, 2], 4: [0, 3], 5: [1, 0], 6: [1, 1], 7: [1, 2], 8: [1, 3], 9: [2, 0], 10: [2, 1], 11: [2, 2], 12: [2, 3], 13: [3, 0], 14: [3, 1], 15: [3, 2]}\n",
     "        index_state = {}\n",
     "        index = [[0, 0], [0, 1], [0, 2], [0, 3], [1, 0], [1, 1], [1, 2], [1, 3], [2, 0], [2, 1], [2, 2], [2, 3], [3, 0], [3, 1], [3, 2], [3, 3]]\n",
@@ -779,7 +776,9 @@
     "\n",
     "    def sqrt_manhattan(node):\n",
     "        rango = 15\n",
-    "        col = 3\n",
+    "        col = 2\n",
+    "        state = node.state\n",
+    "        \n",
     "        index_goal = {0: [3, 3], 1: [0, 0], 2: [0, 1], 3: [0, 2], 4: [0, 3], 5: [1, 0], 6: [1, 1], 7: [1, 2], 8: [1, 3], 9: [2, 0], 10: [2, 1], 11: [2, 2], 12: [2, 3], 13: [3, 0], 14: [3, 1], 15: [3, 2]}\n",
     "        index_state = {}\n",
     "        index = [[0, 0], [0, 1], [0, 2], [0, 3], [1, 0], [1, 1], [1, 2], [1, 3], [2, 0], [2, 1], [2, 2], [2, 3], [3, 0], [3, 1], [3, 2], [3, 3]]\n",
@@ -797,8 +796,8 @@
     "        return math.sqrt(mhd)\n",
     "\n",
     "    def max_heuristic(node):\n",
-    "        score1 = manhattan(node)\n",
-    "        score2 = linear(node)\n",
+    "        score1 = Quince_Puzzle.manhattan(node)\n",
+    "        score2 = Quince_Puzzle.linear(node)\n",
     "        return max(score1, score2)"
    ]
   },
@@ -2627,7 +2626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2636,31 +2635,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "346 µs ± 2.12 µs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "astar_search(qpuzzle_1, linear)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "111 µs ± 282 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "astar_search(qpuzzle_1, Quince_Puzzle.manhattan)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "186 µs ± 1.17 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "astar_search(qpuzzle_1, Quince_Puzzle.sqrt_manhattan)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "122 µs ± 267 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "astar_search(qpuzzle_1, Quince_Puzzle.max_heuristic)"
+   ]
   },
   {
    "cell_type": "markdown",
