--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
     "\n",
     "    def max_heuristic(node):\n",
     "        score1 = Quince_Puzzle.manhattan(node)\n",
-    "        score2 = Quince_Puzzle.linear(node)\n",
+    "        score2 = linear(node)\n",
     "        return max(score1, score2)"
    ]
   },
@@ -2671,14 +2671,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "186 µs ± 1.17 µs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "190 µs ± 164 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
@@ -2689,14 +2689,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "122 µs ± 267 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "123 µs ± 223 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
