--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "(0, 0)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "['llenar jarra de 4', 'llenar jarra de 3']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "(4, 0)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "1"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "(3, 3, 0)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "[('1c', (0, 1)), ('2c', (0, 2)), ('1m1c', (1, 1))]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,15 +512,11 @@
     "            l[pos_hueco] = l[pos_hueco+3]\n",
     "            l[pos_hueco+3] = 0\n",
     "        elif accion == \"Mover hueco izquierda\":\n",
-    "            if pos_hueco in (0,3,6):\n",
-    "                return \"Acción no váida\"\n",
-    "            else:\n",
+    "            if pos_hueco not in (0,3,6):                \n",
     "                l[pos_hueco] = l[pos_hueco-1]\n",
     "                l[pos_hueco-1] = 0\n",
     "        elif accion == \"Mover hueco derecha\":\n",
-    "            if pos_hueco in (2,5,8):\n",
-    "                return \"Acción no váida\"\n",
-    "            else:\n",
+    "            if pos_hueco not in (2,5,8):                \n",
     "                l[pos_hueco] = l[pos_hueco+1]\n",
     "                l[pos_hueco+1] = 0    \n",
     "        \n",
@@ -583,8 +579,8 @@
     "\n",
     "\n",
     "    def max_heuristic(node):\n",
-    "        score1 = manhattan(node)\n",
-    "        score2 = linear(node)\n",
+    "        score1 = Ocho_Puzzle.manhattan(node)\n",
+    "        score2 = Ocho_Puzzle.linear(node)\n",
     "        return max(score1, score2)    "
    ]
   },
@@ -597,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +602,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 0, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +623,7 @@
        "['Mover hueco arriba', 'Mover hueco izquierda', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +644,7 @@
        "(2, 8, 3, 1, 0, 4, 7, 6, 5)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +672,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 5, 0)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +692,7 @@
        "(2, 8, 3, 1, 6, 4, 0, 7, 5)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +712,7 @@
        "1"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,15 +767,11 @@
     "            l[pos_hueco] = l[pos_hueco+4]\n",
     "            l[pos_hueco+4] = 0\n",
     "        elif accion == \"Mover hueco izquierda\":\n",
-    "            if pos_hueco in (0,4,8,12):\n",
-    "                return \"Acción no válida\"\n",
-    "            else:\n",
+    "            if pos_hueco not in (0,4,8,12):               \n",
     "                l[pos_hueco] = l[pos_hueco-1]\n",
     "                l[pos_hueco-1] = 0\n",
     "        elif accion == \"Mover hueco derecha\":\n",
-    "            if pos_hueco in (3,7,11,15):\n",
-    "                return \"Acción no válida\"\n",
-    "            else:\n",
+    "            if pos_hueco not in (3,7,11,15):                \n",
     "                l[pos_hueco] = l[pos_hueco+1]\n",
     "                l[pos_hueco+1] = 0    \n",
     "        \n",
@@ -848,8 +840,8 @@
     "\n",
     "    \n",
     "    def max_heuristic(node):\n",
-    "        score1 = manhattan(node)\n",
-    "        score2 = linear(node)\n",
+    "        score1 = Quince_Puzzle.manhattan(node)\n",
+    "        score2 = Quince_Puzzle.linear(node)\n",
     "        return max(score1, score2)"
    ]
   },
@@ -862,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +863,7 @@
        "(7, 13, 12, 3, 0, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +884,7 @@
        "['Mover hueco arriba', 'Mover hueco abajo', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +905,7 @@
        "(0, 13, 12, 3, 7, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -925,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +926,7 @@
        "(7, 13, 12, 3, 9, 1, 4, 11, 0, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,28 +938,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Acción no válida'"
+       "(7, 13, 12, 3, 0, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p15.result(p15.initial,\"Mover hueco izquierda\")\n",
-    "# Muestra el mensaje de error: Acción no válida"
+    "# Tiene que quedarse igual: (7, 13, 12, 3, 0, 1, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +968,7 @@
        "(7, 13, 12, 3, 1, 0, 4, 11, 9, 15, 8, 14, 5, 10, 2, 6)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1002,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1041,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1047,7 @@
        " 'trasvasar de jarra de 4 a jarra de 3']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1072,7 @@
        " 'trasvasar de jarra de 4 a jarra de 3']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1091,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1105,7 +1097,7 @@
        " 'trasvasar de jarra de 3 a jarra de 4']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1243,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1252,7 +1244,7 @@
        "(2, 8, 3, 1, 6, 4, 7, 0, 5)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1265,7 @@
        "(1, 2, 3, 4, 5, 6, 7, 8, 0)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1328,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1329,7 @@
        "'Este estado inicial no tiene solucion'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1357,7 +1349,7 @@
        "['Mover hueco derecha', 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1368,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 83,
    "metadata": {
     "scrolled": true
    },
@@ -1395,7 +1387,7 @@
        " 'Mover hueco abajo']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2428,7 +2420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2444,7 +2436,7 @@
        " 'Mover hueco abajo']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2472,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2488,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2497,7 +2489,7 @@
        "'Este estado inicial tiene solucion'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2597,7 +2589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -2613,7 +2605,7 @@
        " 'Mover hueco abajo']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2635,7 +2627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2651,18 +2643,18 @@
        " 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "astar_search(puzle,manhattan).solution()"
+    "astar_search(puzle,Ocho_Puzzle.manhattan).solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2663,7 @@
        "(2, 4, 3, 1, 5, 6, 7, 8, 0)"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2682,7 +2674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2691,7 +2683,7 @@
        "(1, 2, 3, 4, 5, 6, 7, 8, 0)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2702,7 +2694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -2718,18 +2710,18 @@
        " 'Mover hueco abajo']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "astar_search(puzle,linear).solution()"
+    "astar_search(puzle,Ocho_Puzzle.linear).solution()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2745,13 +2737,13 @@
        " 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "astar_search(puzle,max_heuristic).solution()"
+    "astar_search(puzle,Ocho_Puzzle.max_heuristic).solution()"
    ]
   },
   {
@@ -2763,7 +2755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2769,7 @@
        " 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2801,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -2810,7 +2802,7 @@
        "(0, 2, 3, 4, 1, 6, 7, 8, 5, 10, 11, 12, 9, 13, 14, 15)"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2830,7 +2822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -2839,7 +2831,7 @@
        "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 0)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2850,7 +2842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -2864,7 +2856,7 @@
        " 'Mover hueco derecha']"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
