busqueda lineal en Misioneros. Solo pide una heurística.

--- a/Practica1.Enunciado.ipynb
+++ b/Practica1.Enunciado.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +364,26 @@
     "            return (s[0] - a[1][0], s[1] - a[1][1], 1)\n",
     "        else:\n",
     "            return (s[0] + a[1][0], s[1] + a[1][1], 0)\n",
-    "      "
+    "        \n",
+    "    def h(self, node):\n",
+    "        \"\"\" Return the heuristic value for a given state.\"\"\"\n",
+    "        return 1\n",
+    "    \n",
+    "    def check_solvability(self, state):\n",
+    "        \"\"\" Checks if the given state is solvable \"\"\"\n",
+    "        # The solvability of a configuration can be checked by calculating the Inversion Permutation. \n",
+    "        #If the total Inversion Permutation is even then the initial configuration is solvable else the initial configuration is not solvable which means that only 9!/2 initial states lead to a solution.\n",
+    "        inversion = 0\n",
+    "        for i in range(len(state)):\n",
+    "            for j in range(i+1, len(state)):\n",
+    "                if (state[i] > state[j]) and state[i] != 0 and state[j]!= 0:\n",
+    "                    inversion += 1\n",
+    "        return inversion % 2 == 0\n",
+    "    \n",
+    "    \n",
+    "    def linear(node):\n",
+    "        goal = (0,0,1)\n",
+    "        return sum([1 if node.state[i] != goal[i] else 0 for i in range(3)])"
    ]
   },
   {
@@ -1012,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2562,14 +2581,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1m1c', (1, 1)),\n",
+       " ('1m', (1, 0)),\n",
+       " ('2c', (0, 2)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2m', (2, 0)),\n",
+       " ('1m1c', (1, 1)),\n",
+       " ('2m', (2, 0)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2c', (0, 2)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2c', (0, 2))]"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#### 4.1. Para el problema de los misioneros define una heurística y comenta sus propiedades\n",
     "# Puedes utilizar alguna de las heurísticas vistas en clase. \n",
     "\n",
-    "# Heurísticas para el problema de los misioneros.\n"
+    "# Heurísticas para el problema de los misioneros.\n",
+    "misioneros = ProblemaMisioneros((3, 3, 0), (0, 0, 1))\n",
+    "astar_search(misioneros).solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('1m1c', (1, 1)),\n",
+       " ('1m', (1, 0)),\n",
+       " ('2c', (0, 2)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2m', (2, 0)),\n",
+       " ('1m1c', (1, 1)),\n",
+       " ('2m', (2, 0)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2c', (0, 2)),\n",
+       " ('1c', (0, 1)),\n",
+       " ('2c', (0, 2))]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "astar_search(misioneros, ProblemaMisioneros.linear).solution()"
    ]
   },
   {
@@ -2763,15 +2835,15 @@
    "source": [
     "####  Vamos a probar el 16-puzzle utilizando el siguiente **estado inicial** \n",
     "\n",
-    "#              +---+---+---+---+\n",
-    "#              | 1 | 2 | 3 | 4 |\n",
-    "#              +---+---+---+---+\n",
-    "#              | 5 | 6 | 7 | 8 |\n",
-    "#              +---+---+---+---+\n",
-    "#              | 9 | 12 |10 |15 |\n",
-    "#              +---+---+---+---+\n",
-    "#              |13 | H |11 |14 |\n",
-    "#              +---+---+---+---+\n",
+    "#              +---+----+----+----+\n",
+    "#              | 1 | 2  | 3  | 4  |\n",
+    "#              +---+----+----+----+\n",
+    "#              | 5 | 6  | 7  | 8  |\n",
+    "#              +---+----+----+----+\n",
+    "#              | 9 | 12 | 10 | 15 |\n",
+    "#              +---+----+----+----+\n",
+    "#              |13 |  H | 11 | 14 |\n",
+    "#              +---+----+----+----+\n",
     "\n",
     "qpuzle = Quince_Puzzle((1,2,3,4,5,6,7,8,9,12,10,15,13,0,11,14)) "
    ]
@@ -3261,9 +3333,9 @@
     "\n",
     "Ten en cuenta que el número de posibles estados iniciales es n!, siendo n el número de fichas (números y hueco). Por tanto, en el puzle 4x4 (16 fichas), tendremos más de 130.000 millones de posibles estados iniciales. Sin embargo, sólo la mitad de esas combinaciones tiene solución. En el caso del siguiente estado inicial que sí tiene solución: (1,2,3,4,5,6,7,8,9,10,12,15,13,14,11,0) indica los nodos generados por A* con alguna de las heurísticas y comparalo con el puzle de 8.\n",
     "\n",
-    "\n",
     "#### Justifica claramente la respuesta basándote en los resultados esperados  (según las clases teóricas) y los resultados obtenidos en las pruebas anteriores.\n",
-    "\n"
+    "\n",
+    " Con los resultados obtenidos se puede observar que con todos los algoritmos utilizados obtenemos la misma longitud de solución. Sin embargo, con la búsqueda lineal conseguimos un tiempo menor."
    ]
   },
   {
